--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 # https://learnxinyminutes.com/docs/yaml/
 
 title: talksportsdata
-description: football analytics blog
+description: sports analytics blog
 github_username: seidlr
 # you can comment the below line out if your repo name is not different than your baseurl
 github_repo: "blog"
